--- a/collisions/collisions.vcxproj
+++ b/collisions/collisions.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{90F70720-F825-46C5-BAE0-94FC292986BD}</ProjectGuid>
     <RootNamespace>collisions</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -143,6 +143,7 @@
     <ClCompile Include="Sphere.cpp" />
     <ClCompile Include="SphereCollider.cpp" />
     <ClCompile Include="Terrain.cpp" />
+    <ClCompile Include="TerrainGeometry.cpp" />
     <ClCompile Include="TerrainScene.cpp" />
     <ClCompile Include="ThreadedLoader.cpp" />
     <ClCompile Include="Transform.cpp" />
@@ -178,6 +179,7 @@
     <ClInclude Include="Sphere.h" />
     <ClInclude Include="SphereCollider.h" />
     <ClInclude Include="Terrain.h" />
+    <ClInclude Include="TerrainGeometry.h" />
     <ClInclude Include="TerrainScene.h" />
     <ClInclude Include="Transform.h" />
     <ClInclude Include="Vertex.h" />
