--- a/collisions/collisions.vcxproj
+++ b/collisions/collisions.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{90F70720-F825-46C5-BAE0-94FC292986BD}</ProjectGuid>
     <RootNamespace>collisions</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -122,6 +122,8 @@
   <ItemGroup>
     <ClCompile Include="AI.cpp" />
     <ClCompile Include="AIScene.cpp" />
+    <ClCompile Include="Boid.cpp" />
+    <ClCompile Include="BoidScene.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Cube.cpp" />
     <ClCompile Include="DXApp.cpp" />
@@ -149,6 +151,8 @@
   <ItemGroup>
     <ClInclude Include="AI.h" />
     <ClInclude Include="AIScene.h" />
+    <ClInclude Include="Boid.h" />
+    <ClInclude Include="BoidScene.h" />
     <ClInclude Include="BufferStructs.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="ConstantBuffers.h" />
